# nordocr

./: .gitignore  Cargo.toml  Dockerfile  HANDOFF.md
bench/benches/: pipeline_bench.rs
crates/nordocr-core/: Cargo.toml
crates/nordocr-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/nordocr-decode/: Cargo.toml
crates/nordocr-decode/src/: dali.rs  image.rs  lib.rs  pdf.rs
crates/nordocr-detect/: Cargo.toml
crates/nordocr-detect/src/: batch.rs  contour.rs  engine.rs  gpu_morphological.rs  lib.rs  morphological.rs  postprocess.rs
crates/nordocr-detect/tests/: compare_csharp.rs  gpu_detect.rs  tiff_detect.rs
crates/nordocr-gpu/: Cargo.toml
crates/nordocr-gpu/src/: buffer.rs  context.rs  lib.rs  memory.rs  stream.rs
crates/nordocr-pipeline/: Cargo.toml
crates/nordocr-pipeline/src/: config.rs  lib.rs  pipeline.rs  scheduler.rs
crates/nordocr-pipeline/tests/: e2e_recognize.rs
crates/nordocr-preprocess/: Cargo.toml  build.rs
crates/nordocr-preprocess/kernels/: binarize.cu  denoise.cu  deskew.cu  detect_preprocess.cu  morphology.cu
crates/nordocr-preprocess/src/: binarize.rs  denoise.rs  deskew.rs  detect_preprocess.rs  gpu_arch.rs  lib.rs  morphology.rs
crates/nordocr-recognize/: Cargo.toml
crates/nordocr-recognize/src/: batch.rs  charset.rs  decode.rs  engine.rs  lib.rs  tesseract.rs
crates/nordocr-server/: Cargo.toml
crates/nordocr-server/src/: api.rs  cli.rs  main.rs
crates/nordocr-trt/: Cargo.toml
crates/nordocr-trt-sys/: Cargo.toml  build.rs  trt_shim.cpp
crates/nordocr-trt-sys/src/: lib.rs
crates/nordocr-trt/src/: builder.rs  graph.rs  lib.rs  runtime.rs
crates/nordocr-trt/tests/: load_engine.rs
docs/: leading-garbage-fix-results.md  svtrv2-retraining-1024.md
models/parseq/: recognize_parseq_simplified.onnx
models/svtrv2-1024/: recognize_svtrv2.onnx  recognize_svtrv2.onnx.data  recognize_svtrv2_meta.yaml
models/svtrv2-1792/: recognize_svtrv2.onnx  recognize_svtrv2.onnx.data
models/svtrv2-768/: recognize_svtrv2.onnx  recognize_svtrv2.onnx.data
scripts/: analyze_3way.py  compare_3way.py  referee_3way.py  vlm_compare.py  vlm_evaluate.py
training/: TRAINING_PIPELINE.md  requirements.txt
training/data/: generate_nordic_synthetic.py
training/detect/: train.py  train_fast.py  train_rtmdet.py
training/eval/: compare_onnx.py  evaluate.py  test_page_onnx.py
training/export/: build_trt_engine.py  export_onnx.py  export_onnx_all.py  export_onnx_svtrv2.py
training/recognize/: charset.py  dataset.py  nordic_dict.txt  train.py  train_clip4str.py  train_maerec.py  train_parseq.py  train_svtrv2.py
training/tools/: split_dataset.py  tsv_to_lmdb.py
