[package]
name = "nordocr-detect"
version.workspace = true
edition.workspace = true

[dependencies]
nordocr-core = { workspace = true }
nordocr-gpu = { workspace = true }
nordocr-preprocess = { workspace = true }
nordocr-trt = { workspace = true }
cudarc = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
half = { workspace = true }

[dev-dependencies]
tiff = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
